organized how to execute a program to measure performance